--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,9 @@ name: ci
 
 on:
   # TODO: topicブランチにpushされたらワークフローが発動するようにする
-  branches:
-    - 'topic'
+  push:
+    branches:
+      - 'topic'
 
 jobs:
   test:
@@ -19,5 +20,5 @@ jobs:
 
       - name: 'テストを実行'
         working-directory: lambda
-        # TODO: go test を実行する
+        TODO: go test を実行する
         run: go test
